# barry

./: CMakeLists.txt  LICENSE
src/: barycentric.c  barycentric.cpu.c  barycentric.cu  mat.c  matrix.c  matrix.h  render.h  resamplers.h  thread.c  thread.h
test/: CMakeLists.txt
test/barycentricCPU/: identity.c  internal.c  play.c
test/barycentricGPU/: identity.c  internal.c  play.c
test/common/: tiff.write.c  tiff.write.h
test/math/: inv33.c  mul.c
